# rpi-rgb-led-matrix-pybuild

./: CMakeLists.txt  Makefile  README.md  pyproject.toml
bindings/python/rgbmatrix/: CMakeLists.txt
cmake/: rgbmatrixlibConfig.cmake.in
lib/: CMakeLists.txt
